--- a/Demineur/Demineur.csproj
+++ b/Demineur/Demineur.csproj
@@ -50,7 +50,9 @@
     <Compile Include="AboutBox.Designer.cs">
       <DependentUpon>AboutBox.cs</DependentUpon>
     </Compile>
-    <Compile Include="Cases.cs" />
+    <Compile Include="Cases.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
