--- a/Demineur/Demineur.csproj
+++ b/Demineur/Demineur.csproj
@@ -125,8 +125,11 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Resources\cinq.PNG" />
+    <None Include="Resources\The_Body_Bome_The_Hurt_Locker.wav" />
     <None Include="Resources\zero.png" />
     <None Include="Resources\dead-smiley.png" />
+    <None Include="Resources\Ding_Sound_Effect.wav" />
+    <None Include="Resources\Explosion_sound.wav" />
     <Content Include="Resources\huit.PNG" />
     <Content Include="Resources\quatre.PNG" />
     <Content Include="Resources\sept.PNG" />
